# goit-python-web-homework-07

./: README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 537dcdf1f237_init.py  bf7262705629_third.py  fd8f0d197836_second.py
hogwarts/: __init__.py  config.ini  connection_db.py  main.py  models.py  my_select.py  seed.py
