[tool.poetry]
name = "hogwarts"
version = "0.1.0"
description = ""
authors = ["Oleksii Hladkov <agladkoff17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
faker = "^20.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
